--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@mapbox/vector-tile": "^1.3.1",
+    "@types/jquery": "^3.5.16",
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/pbf": "^3.0.2",
     "css-loader": "^6.7.3",
@@ -36,6 +37,7 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
