--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "target": "es6",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "sourceMap": true
+    "sourceMap": true,
+    "paths": {
+      "ol-mbtiles": ["./src"]
+    },
+    "baseUrl": "."
   },
   "exclude": [
     "node_modules"
