--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/mmomtchev/ol-mbtiles#readme",
   "dependencies": {
     "@types/geojson": "^7946.0.10",
+    "html-loader": "^4.2.0",
     "pako": "^2.1.0",
     "pbf": "^3.2.1",
     "sql.js-httpvfs": "^0.8.12"
@@ -34,6 +35,9 @@
     "@types/pbf": "^3.0.2",
     "css-loader": "^6.7.3",
     "ol": "^7.2.2",
+    "prettier": "^2.8.4",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
