--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MBTiles format reader for Openlayers",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
