--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development",
+    "build:examples": "webpack --mode production",
+    "build": "npm run build:examples",
+    "deploy:examples": "node scripts/publish-ghpages.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,6 +38,8 @@
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/pbf": "^3.0.2",
     "css-loader": "^6.7.3",
+    "gh-pages": "^5.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "ol": "^7.2.2",
     "prettier": "^2.8.4",
     "prism-themes": "^1.9.0",
