--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
   },
   "homepage": "https://github.com/mmomtchev/ol-mbtiles#readme",
   "dependencies": {
-    "@types/geojson": "^7946.0.10",
-    "html-loader": "^4.2.0",
+    "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
     "pbf": "^3.2.1",
     "sql.js-httpvfs": "^0.8.12"
   },
+  "peerDependencies": {
+    "ol": ">=7.0.0"
+  },
   "devDependencies": {
-    "@mapbox/vector-tile": "^1.3.1",
+    "@types/geojson": "^7946.0.10",
     "@types/jquery": "^3.5.16",
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/pbf": "^3.0.2",
     "css-loader": "^6.7.3",
     "gh-pages": "^5.0.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "ol": "^7.2.2",
     "prettier": "^2.8.4",
