--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "MBTiles format reader for Openlayers",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --mode development",
     "build:examples": "webpack --mode production",
-    "build": "npm run build:examples",
+    "build:lib": "rollup -c rollup.config.mjs",
+    "build": "npm run build:lib && npm run build:examples",
     "deploy:examples": "node scripts/publish-ghpages.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -29,29 +31,40 @@
     "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
     "pbf": "^3.2.1",
-    "sql.js-httpvfs": "^0.8.12"
+    "sql.js-httpvfs": "github:mmomtchev/sql.js-httpvfs#dist"
   },
   "peerDependencies": {
     "ol": ">=7.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/chai-spies": "^1.0.3",
     "@types/geojson": "^7946.0.10",
     "@types/jquery": "^3.5.16",
     "@types/mapbox__vector-tile": "^1.3.0",
+    "@types/mocha": "^10.0.1",
     "@types/pbf": "^3.0.2",
+    "chai": "^4.3.7",
+    "chai-spies": "^1.0.0",
     "css-loader": "^6.7.3",
     "gh-pages": "^5.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "link": "^1.5.1",
+    "mocha": "^10.2.0",
     "ol": "^7.2.2",
     "prettier": "^2.8.4",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
+    "rollup": "^3.17.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.5",
+    "web-worker": "^1.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
