allow clean overriding of the worker urls

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -2,7 +2,8 @@
   "spec": "test/*.test.ts",
   "require": [
     "ts-node/register",
-    "tsconfig-paths/register.js"
+    "tsconfig-paths/register.js",
+    "test/setup.ts"
   ],
   "reporter": "tap",
   "timeout": 30000,
