--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:lib": "rollup -c rollup.config.mjs",
     "build": "npm run build:lib && npm run build:examples",
     "deploy:examples": "node scripts/publish-ghpages.js",
+    "c8": "node_modules/.bin/c8 mocha",
+    "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
     "test": "mocha"
   },
   "repository": {
@@ -45,6 +47,7 @@
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/mocha": "^10.0.1",
     "@types/pbf": "^3.0.2",
+    "c8": "^7.13.0",
     "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
     "css-loader": "^6.7.3",
