--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "deploy:examples": "node scripts/publish-ghpages.js",
     "c8": "node_modules/.bin/c8 mocha",
     "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
-    "test": "mocha"
+    "test": "mocha",
+    "preversion": "npm run build && npm run lint && npm run test",
+    "lint": "eslint src/* test examples/*.{cj,t,mj}s examples/code/*",
+    "lint:fix": "eslint --fix src/* test examples/*.{cj,t,mj}s examples/code/*"
   },
   "repository": {
     "type": "git",
@@ -48,10 +51,14 @@
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/mocha": "^10.0.1",
     "@types/pbf": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
     "css-loader": "^6.7.3",
+    "eslint": "^8.35.0",
+    "eslint-plugin-mocha": "^10.1.0",
     "gh-pages": "^5.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
