--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
     "pbf": "^3.2.1",
-    "sql.js-httpvfs": "github:mmomtchev/sql.js-httpvfs#dist"
+    "sql.js-httpvfs": ">=0.8.12"
   },
   "peerDependencies": {
     "ol": ">=7.0.0"
@@ -70,6 +70,7 @@
     "prismjs": "^1.29.0",
     "rollup": "^3.17.3",
     "style-loader": "^3.3.1",
+    "sql.js-httpvfs": "github:mmomtchev/sql.js-httpvfs#dist",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
