--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
     "test": "mocha",
     "preversion": "npm run build && npm run lint && npm run test",
+    "postversion": "git push && git push --tags && npm run deploy:examples",
     "lint": "eslint src/* test examples/*.{cj,t,mj}s examples/code/*",
     "lint:fix": "eslint --fix src/* test examples/*.{cj,t,mj}s examples/code/*"
   },
