--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
     "pbf": "^3.2.1",
-    "sql.js-httpvfs": ">=0.8.12"
+    "sqlite-wasm-http": "^1.0.0"
   },
   "peerDependencies": {
     "ol": ">=7.0.0"
@@ -71,13 +71,12 @@
     "prismjs": "^1.29.0",
     "rollup": "^3.17.3",
     "style-loader": "^3.3.1",
-    "sql.js-httpvfs": "github:mmomtchev/sql.js-httpvfs#dist",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.5",
-    "web-worker": "^1.2.0",
+    "web-worker": "github:mmomtchev/web-worker#workerglobalscope",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
