--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:examples": "webpack --mode production",
     "build:lib": "rollup -c rollup.config.mjs",
     "build": "npm run build:lib && npm run build:examples",
-    "deploy:examples": "node scripts/publish-ghpages.cjs",
+    "deploy:ghpages": "node scripts/publish-ghpages.cjs",
+    "deploy:momtchev": "tar -C docs/examples -zcf - `ls docs/examples` | mbuffer | ssh ol-mbtiles@pelikan.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
     "c8": "node_modules/.bin/c8 mocha",
     "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
     "test": "mocha",
