--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jquery": "^3.5.16",
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/mocha": "^10.0.1",
+    "@types/pako": "^2.0.0",
     "@types/pbf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
