--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "webpack serve --mode development",
     "build:examples": "webpack --mode production",
     "build:lib": "rollup -c rollup.config.mjs",
-    "build": "npm run build:lib && npm run build:examples",
+    "build:doc": "documentation build src/*.ts --shallow -f md -o docs/API.md",
+    "build": "npm run build:lib && npm run build:examples && npm run build:doc",
     "deploy:ghpages": "node scripts/publish-ghpages.cjs",
     "deploy:momtchev": "tar -C docs/examples -zcf - `ls docs/examples` | mbuffer | ssh ol-mbtiles@pelikan.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
     "c8": "node_modules/.bin/c8 mocha",
@@ -60,6 +61,7 @@
     "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
     "css-loader": "^6.7.3",
+    "documentation": "^14.0.1",
     "eslint": "^8.35.0",
     "eslint-plugin-mocha": "^10.1.0",
     "gh-pages": "^5.0.0",
