--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "c8": "node_modules/.bin/c8 mocha",
     "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
     "test": "mocha",
+    "prepare": "npm run build",
     "preversion": "npm run build && npm run lint && npm run test",
     "version": "git add package.json docs",
     "postversion": "git push && git push --tags && npm run deploy:momtchev && npm run deploy:ghpages",
