--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/pbf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
