--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "strict": true,
+    "resolveJsonModule": true,
     "paths": {
       "ol-mbtiles": [
         "./src"
