--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
+        ol-version: [7.0.0, 7.1.0, 7.2.0, 7.2.2, 7.3.0]
 
     steps:
     - uses: actions/checkout@v3
@@ -22,6 +23,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm i ol@${{ matrix.ol-version }}
     - run: npm run build
     - run: npm test
 
