--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x]
+        ol-version: [8.1.0, 8.2.0]
+
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 18.x
