--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:doc": "documentation build src/*.ts --shallow -f md -o docs/API.md",
     "build": "npm run build:lib && npm run build:examples && npm run build:doc",
     "deploy:ghpages": "node scripts/publish-ghpages.cjs",
-    "deploy:momtchev": "tar -C docs/examples -zcf - `ls docs/examples` | mbuffer | ssh ol-mbtiles@pelikan.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
+    "deploy:momtchev": "tar -C docs/examples -zcf - `ls docs/examples` | mbuffer | ssh ol-mbtiles@orel.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
     "c8": "node_modules/.bin/c8 mocha",
     "lcov": "node_modules/.bin/c8 report --reporter=text-lcov > coverage/tests.lcov",
     "test": "mocha",
