--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        ol-version: [8.1.0, 8.2.0, 9.0.0]
+        ol-version: [8.1.0, 8.2.0, 9.0.0, 9.1.0]
 
     steps:
     - uses: actions/checkout@v4
