--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
-    "pbf": "^4.0.1",
+    "pbf": "^3.3.0",
     "sqlite-wasm-http": "^1.2.0"
   },
   "peerDependencies": {
@@ -57,6 +57,7 @@
     "@types/mocha": "^10.0.6",
     "@types/pako": "^2.0.3",
     "@types/pbf": "^3.0.5",
+    "@types/rbush": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "@vue/preload-webpack-plugin": "^2.0.0",
