--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "pako": "^2.1.0",
-    "pbf": "^4.0.1",
+    "pbf": "^3.3.0",
     "sqlite-wasm-http": "^1.2.0"
   },
   "peerDependencies": {
-    "ol": ">=7.0.0 <9.3.0"
+    "ol": "10.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
@@ -57,6 +57,7 @@
     "@types/mocha": "^10.0.6",
     "@types/pako": "^2.0.3",
     "@types/pbf": "^3.0.5",
+    "@types/rbush": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "@vue/preload-webpack-plugin": "^2.0.0",
@@ -72,7 +73,7 @@
     "html-webpack-plugin": "^5.6.0",
     "link": "^2.1.0",
     "mocha": "^10.2.0",
-    "ol": "^9.2.2",
+    "ol": "10.0.0",
     "prettier": "^3.2.5",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
