--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        ol-version: [10.0.0]
+        ol-version: [10.0.0, 10.1.0, 10.2.0]
 
     steps:
     - uses: actions/checkout@v4
