--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm i ol@${{ matrix.ol-version }}
+    - run: npm run lint
     - run: npm run build
     - run: npm test
 
