--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepare": "npm run build",
     "preversion": "npm run build && npm run lint && npm run test",
     "version": "git add package.json docs",
-    "postversion": "git push && git push --tags && npm run deploy:momtchev && npm run deploy:ghpages",
+    "postversion": "git push && npm run build && git push --tags && npm run deploy:momtchev && npm run deploy:ghpages",
     "lint": "eslint src/* test examples/*.{cj,t,mj}s examples/code/*",
     "lint:fix": "eslint --fix src/* test examples/*.{cj,t,mj}s examples/code/*"
   },
